tests/neg/i16453.check
-- [E172] Type Error: tests/neg/i16453.scala:14:21 ---------------------------------------------------------------------
14 |  summon[Option[Int]] // error
   |                     ^
   |No given instance of type Option[Int] was found for parameter x of method summon in object Predef
   |
   |Note: implicit conversions are not automatically applied to arguments of using clauses. You will have to pass the argument explicitly.
   |The following conversions in scope result in Option[Int]: 
   |  - final given def given_Conversion_T_Option[T]: Conversion[T, Option[T]]
   |  - implicit def toOption[T](t: T): Option[T]
-- [E172] Type Error: tests/neg/i16453.scala:15:25 ---------------------------------------------------------------------
15 |  implicitly[Option[Int]] // error
   |                         ^
   |No given instance of type Option[Int] was found for parameter e of method implicitly in object Predef
   |
   |Note: implicit conversions are not automatically applied to arguments of using clauses. You will have to pass the argument explicitly.
   |The following conversions in scope result in Option[Int]: 
   |  - final given def given_Conversion_T_Option[T]: Conversion[T, Option[T]]
   |  - implicit def toOption[T](t: T): Option[T]
